hphp/test/quick/redeclared_method3.php.expectf

Fatal error: Cannot make non-static method I::foo() static in class C in %s on line 5
